FIX | input overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,5 @@
 #root {
   position: relative;
   height: 100%;
+  width: 100%;
 }
