--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -113,6 +113,7 @@
       color: $text-dark;
       border-radius: 10px;
       caret-color: $text-dark;
+      width: 20%;
       &::-webkit-input-placeholder {
         color: $text-light;
       }
